# ATodo_cef

./: .gitignore  CMakeLists.txt  main.cpp
src/cef/: CefWidget.cpp  CefWidget.h  SCefClient.cpp  SCefClient.h  atodo_app.cpp  atodo_app.h  atodo_client.cpp  atodo_client.h  browser_app.h  setup_cef.cpp  setup_cef.h  test.cpp  test.h  window_delegate.cpp  window_delegate.h  x_error_handler.cpp
src/error/: x_error_handler.cpp  x_error_handler.h
src/minimal/: CMakeLists.txt  app_browser_minimal.cc  client_minimal.cc
src/shared/: CMakeLists.txt  README.md  client_util.cc
src/widget/: cef_widget.cpp  cef_widget.h
